# IDPVMNtupleAnalysis

./: .gitmodules  CMakeLists.txt  Readme.md
IDPVMNtupleAnalysis/: IDPVMPlotUtils.h  IDPVMPopulators.h  IDPVMSelections.h  IDPVMTemplates.h  IDPVMTree.h  IDPVMUtilities.h  IDPVMUtilities.ixx  NtupleVarReader.h  ResolutionHelper.h
Root/: IDPVMPlotUtils.cxx  IDPVMPopulators.cxx  IDPVMSelections.cxx  IDPVMTemplates.cxx  IDPVMTree.cxx  IDPVMUtilities.cxx  NtupleVarReader.cxx  ResolutionHelper.cxx
python/: PlotMigration.py
util/: BinningMigrations.cxx  CheckEventRate.cxx  CompareEfficiencies.cxx  CompareFakeRates.cxx  CompareParameters.cxx  ComparePulls.cxx  CompareResolutions.cxx  ExtractResolution.cxx  IDPVMBinExtractor.cxx  ReadIDPVMTree.cxx
util/IDTrackingStudies/: NtracksLooseBLS.cxx  PerfMonLooseBLS.cxx
util/Misc/: BinningMigrations.cxx  IDPVMBinExtractor.cxx  ReadIDPVMTree.cxx
util/Public/: IDSoftwarePubPlots.cxx  ITkPerformancePlots.cxx  ITkPubNotePlots.cxx
util/ValidateIDPVMTree/: CompareEfficiencies.cxx  CompareFakeRates.cxx  CompareResolutions.cxx
